Fix extra space in mobile view by making div max-height instead of specific height

--- a/client/css/_inbox.scss
+++ b/client/css/_inbox.scss
@@ -1,3 +1,8 @@
+#conversations_list {
+	overflow-y: scroll;
+	max-height: 400px;
+	margin-bottom: 20px;
+}
 .conversation-unread {
   background: $light-grey;
 }
